css fix to look better on mobile

--- a/public/tweaks.css
+++ b/public/tweaks.css
@@ -5,6 +5,7 @@
     margin-left: 2%;
 }
 #topLine {
+    width: 90%;
     display: flex;
     justify-content: space-between;
 }
